[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangosint"
version = "0.1.0"
description = "Privacy-First Modular OSINT & Infrastructure Intelligence Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["osint", "intelligence", "privacy", "cli", "framework"]
authors = [
  {name = "k6w", email = "mewing@duck.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "setuptools",
  "typer[all]>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "httpx[http2]>=0.25.0",
  "aiofiles>=23.0.0",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.0",
  "tqdm>=4.65.0",
  "censys-platform>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/k6w/mangosint"
Documentation = "https://mangosint.readthedocs.io/"
Repository = "https://github.com/k6w/mangosint"
Issues = "https://github.com/k6w/mangosint/issues"

[project.scripts]
mangosint = "mangosint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["mangosint"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
ignore_errors = true